# z3-examples

./: .ocamlformat  dune-project
lib/: bit_tricks.ml  dune  kinematic_equation.ml  official_exampl.ml  puzzles.ml
test/: dune
